# test-steps

./: bogus-date.txt  pyproject.toml
.github/: andaction.yml
.github/workflows/: ci.yml  deploy.yml  import-fondsnet-data.yml
.github/workflows/custom-deploy-steps/: action.yml
fondsnet/: create_pull_request.py  import_fondsnet_companies.py  import_fondsnet_contacts.py  import_fondsnet_dealers.py
fondsnet/tests/: Test Konfi-Liste.xlsx  test_create_pull_request.py  test_import_fondsnet_contacts.py
